ingress-rules/nlp-api.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nlp-api
spec:
  rules:
  - host: nlp-api.fleur.ai
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
