ingress-rules/traefik.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-console
spec:
  rules:
  - host: lb.fleur.ai
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-console
          servicePort: 8080
